--- a/JegyzoInfo/appsettings.json
+++ b/JegyzoInfo/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SiteCode": "JI",
+  "SiteIDForAdmiral":  22
 }
