--- a/JegyzoInfo/ClientApp/package.json
+++ b/JegyzoInfo/ClientApp/package.json
@@ -24,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.6.0",
     "ngx-cookie-service": "^11.0.2",
+    "ngx-page-scroll": "^7.0.4",
+    "ngx-page-scroll-core": "^7.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
