--- a/JegyzoInfo/ClientApp/package.json
+++ b/JegyzoInfo/ClientApp/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/localize": "~11.0.5",
+    "@angular/material": "^11.1.0",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.6.0",
+    "material": "^0.4.3",
     "ngx-cookie-service": "^11.0.2",
     "ngx-page-scroll": "^7.0.4",
     "ngx-page-scroll-core": "^7.0.3",
